added menu icon and navbar for mobile

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -5,3 +5,8 @@
 
 // LAYOUT
 @import "./layout/header";
+@import "./layout/nav";
+@import "./layout/main";
+
+// COMPONENTS
+@import "./components/menu";
