--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -1,6 +1,7 @@
 :root {
   --primary-color: hsla(0, 95%, 35%, 1);
   --font-size: 1rem;
+  --header-height: 5rem;
 }
 
 html {
@@ -9,6 +10,10 @@ html {
 
 body {
   background: white;
+}
+
+img {
+  width: 100%;
 }
 
 h1,
