--- a/src/css/components/_menu.scss
+++ b/src/css/components/_menu.scss
@@ -16,6 +16,7 @@
     // border-radius: calc(var(--thickness-ratio) * var(--menu-width));
     background-color: hsl(0, 100%, 100%);
     position: relative;
+    transition: transform 0.2s;
 
     &:before,
     &:after {
@@ -26,6 +27,7 @@
       height: calc(var(--thickness-ratio) * var(--menu-width));
       // border-radius: calc(var(--thickness-ratio) * var(--menu-width));
       background-color: hsl(0, 100%, 100%);
+      transition: transform 0.2s;
     }
 
     &:before {
@@ -33,6 +35,19 @@
     }
     &:after {
       top: calc((-2.7 * var(--thickness-ratio)) * var(--menu-width));
+    }
+
+    &.toggled {
+      background: transparent;
+
+      &::before {
+        transform: rotate(45deg) translate(-0.5em, -0.5em);
+      }
+      &::after {
+        transform: rotate(-45deg) translate(-0.5em, 0.5em);
+
+        // background-color: black;
+      }
     }
   }
 }
