--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -15,6 +15,8 @@ h6 {
   max-width: 60ch;
   line-height: 1.2em;
   padding-bottom: 0.5rem;
+  text-align: center;
+  margin: auto;
 }
 
 h1 {
@@ -49,6 +51,8 @@ li {
   max-width: 60ch;
   margin: auto;
   padding-bottom: 0.5rem;
+  text-align: center;
+  margin: auto;
 }
 
 form {
