--- a/src/css/components/_slider.scss
+++ b/src/css/components/_slider.scss
@@ -1,6 +1,6 @@
 .slider {
   position: relative;
-  width: 700px;
+  width: 100%;
   aspect-ratio: 3/2;
   border: 1px solid var(--primary-color);
   margin: auto;
