--- a/src/css/components/_slider.scss
+++ b/src/css/components/_slider.scss
@@ -36,8 +36,8 @@
     }
 
     .icon {
-      width: 100%;
-      height: 100%;
+      width: 80px;
+      height: 80px;
       display: flex;
       justify-content: center;
       align-items: center;
