--- a/src/css/components/_slider.scss
+++ b/src/css/components/_slider.scss
@@ -20,8 +20,8 @@
 
   .arrow {
     position: absolute;
-    width: 2rem;
-    height: 2rem;
+    width: 3rem;
+    height: 3rem;
     border-radius: 2rem;
     background-color: var(--primary-color);
     top: 50%;
@@ -35,9 +35,7 @@
       transform: translatey(-50%);
     }
 
-    .icon {
-      width: 80px;
-      height: 80px;
+    &.icon {
       display: flex;
       justify-content: center;
       align-items: center;
