--- a/src/css/layout/_main.scss
+++ b/src/css/layout/_main.scss
@@ -40,3 +40,27 @@ hr {
 .feature {
   margin-block: 3rem;
 }
+
+.service {
+  transform: scale(0);
+  transition: transform 1s;
+  &.show {
+    transform: scale(1);
+  }
+}
+
+.feature {
+  opacity: 0;
+  transition: opacity 1s;
+  &.show {
+    opacity: 1;
+  }
+}
+
+.benefits {
+  transform: scale(0);
+  transition: transform 1s;
+  &.show {
+    transform: scale(1);
+  }
+}
