--- a/src/css/components/_slider.scss
+++ b/src/css/components/_slider.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   aspect-ratio: 3/2;
-  border: 1px solid var(--primary-color);
+  // border: 1px solid var(--primary-color);
   margin: auto;
   overflow: hidden;
   @supports not (aspect-ratio: auto) {
@@ -23,7 +23,7 @@
     width: 3rem;
     height: 3rem;
     border-radius: 2rem;
-    background-color: var(--primary-color);
+    // background-color: var(--primary-color);
     top: 50%;
 
     &.left {
@@ -43,6 +43,23 @@
       color: white;
     }
   }
+
+  // .arrows {
+  //   position: absolute;
+  //   top: 50%;
+  //   left: 50%;
+  //   transform: translate(-50%);
+
+  //   display: flex;
+  //   justify-content: space-between;
+
+  //   align-items: center;
+  //   // border: 1px solid red;
+  //   width: 90%;
+  //   color: white;
+
+  //   // height: 200px;
+  // }
 }
 
 .slides {
