--- a/src/css/components/_form.scss
+++ b/src/css/components/_form.scss
@@ -1,3 +1,31 @@
 form {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 30rem;
+  margin: auto;
+  text-align: center;
+
+  input,
+  textarea {
+    width: 60%;
+    border: none;
+    border-bottom: 1px solid gray;
+    padding-block: 1rem;
+    margin: 1rem auto;
+    text-align: center;
+
+    &::placeholder {
+      color: gray;
+      font-size: calc(1 * var(--font-size));
+    }
+  }
+
+  button {
+    width: max-content;
+    padding: 0.5rem;
+    text-align: center;
+    margin: 1rem auto;
+  }
 }
