updated CSS for desktop

--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -28,13 +28,5 @@ section {
 
 img {
   width: 100%;
+  display: block;
 }
-
-// figure {
-//   width: max-content;
-//   height: 200px;
-// }
-
-// picture {
-//   height: auto;
-// }
