--- a/src/css/components/_form.scss
+++ b/src/css/components/_form.scss
@@ -4,7 +4,7 @@ form {
   flex-direction: column;
   justify-content: center;
   max-width: 30rem;
-  margin: auto;
+  // margin: auto;
   text-align: center;
 
   input,
@@ -20,12 +20,5 @@ form {
       color: gray;
       font-size: calc(0.8 * var(--font-size));
     }
-  }
-
-  button {
-    width: max-content;
-    padding: 0.5rem;
-    text-align: center;
-    margin: 1rem auto;
   }
 }
