--- a/public/css/components/_slider.scss
+++ b/public/css/components/_slider.scss
@@ -2,13 +2,14 @@
   position: relative;
   width: 100%;
   aspect-ratio: 3/2;
+  border: 1px solid red;
 
   max-width: 50rem;
 
   overflow: hidden;
   @supports not (aspect-ratio: auto) {
     height: 300px;
-    @media (min-width: 800px) {
+    @media (min-width: 50rem) {
       height: 500px;
     }
   }
@@ -18,7 +19,7 @@
     width: 3rem;
     height: 3rem;
     border-radius: 2rem;
-    // background-color: var(--primary-color);
+    background-color: var(--primary-color);
     top: 50%;
 
     &.left {
