--- a/public/css/components/_form.scss
+++ b/public/css/components/_form.scss
@@ -15,10 +15,24 @@ form {
     padding-block: 0.5rem;
     margin: 0.5rem auto;
     text-align: center;
+    transition: transform 0.7s;
+    resize: none;
+    font-family: var(--font-family);
 
     &::placeholder {
       color: gray;
       font-size: calc(0.8 * var(--font-size));
+    }
+    &:not(:placeholder-shown) {
+      color: black;
+      font-style: italic;
+      font-size: calc(0.8 * var(--font-size));
+    }
+
+    &:focus {
+      outline: none;
+      border-bottom: 1px solid var(--primary-color);
+      transform: scale(1.2);
     }
   }
 }
