--- a/public/css/components/_button.scss
+++ b/public/css/components/_button.scss
@@ -8,4 +8,29 @@ button {
   color: white;
   font-size: calc(0.9 * var(--font-size));
   border: none;
+  position: relative;
+  border: 1px solid var(--primary-color);
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background-color: white;
+
+    // z-index: -1;
+  }
+
+  &.clicked {
+    span {
+      mix-blend-mode: difference;
+    }
+
+    &::before {
+      transition: all 2s;
+      width: 100%;
+    }
+  }
 }
