--- a/public/css/components/_form.scss
+++ b/public/css/components/_form.scss
@@ -9,15 +9,16 @@ form {
 
   input,
   textarea {
-    width: 60%;
+    width: 100%;
     border: none;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid #c0c0c0;
     padding-block: 0.5rem;
-    margin: 0.5rem auto;
+    margin: 1rem auto;
     text-align: center;
     transition: transform 0.7s;
     resize: none;
     font-family: var(--font-family);
+    background-color: white;
     box-shadow: none;
 
     &::placeholder {
