--- a/public/css/components/_slider.scss
+++ b/public/css/components/_slider.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   aspect-ratio: 3/2;
-  border: 1px solid red;
+  border: 1px solid var(--primary-color);
 
   max-width: 50rem;
 
